--- a/etl/STREAM_PROJECT/process/stream_paradise_0.1.properties
+++ b/etl/STREAM_PROJECT/process/stream_paradise_0.1.properties
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:TalendProperties="http://www.talend.org/properties">
-  <TalendProperties:Property xmi:id="_0MyLoKRKEeauHJVjKxZq0g" id="_0Mq24KRKEeauHJVjKxZq0g" label="stream_paradise" creationDate="2016-11-06T17:59:51.893+0000" modificationDate="2016-11-11T23:22:11.818+0000" version="0.1" statusCode="" item="_0MyLoqRKEeauHJVjKxZq0g" displayName="stream_paradise">
+  <TalendProperties:Property xmi:id="_0MyLoKRKEeauHJVjKxZq0g" id="_0Mq24KRKEeauHJVjKxZq0g" label="stream_paradise" creationDate="2016-11-06T17:59:51.893+0000" modificationDate="2016-11-12T15:39:24.043+0000" version="0.1" statusCode="" item="_0MyLoqRKEeauHJVjKxZq0g" displayName="stream_paradise">
     <author href="../talend.project#_Y0gL4KRKEeaUw_C9Rpr8Cw"/>
   </TalendProperties:Property>
-  <TalendProperties:ItemState xmi:id="_0MyLoaRKEeauHJVjKxZq0g" path="" locked="true" lockDate="2016-11-11T22:19:08.089+0000">
-    <locker href="../talend.project#_Y0gL4KRKEeaUw_C9Rpr8Cw"/>
-  </TalendProperties:ItemState>
+  <TalendProperties:ItemState xmi:id="_0MyLoaRKEeauHJVjKxZq0g" path=""/>
   <TalendProperties:ProcessItem xmi:id="_0MyLoqRKEeauHJVjKxZq0g" property="_0MyLoKRKEeauHJVjKxZq0g" state="_0MyLoaRKEeauHJVjKxZq0g">
     <process href="stream_paradise_0.1.item#/"/>
   </TalendProperties:ProcessItem>
