--- a/etl/STREAM_PROJECT/talend.project
+++ b/etl/STREAM_PROJECT/talend.project
@@ -82,23 +82,25 @@
         <elementParameter xmi:id="_t7udS6RKEeauHJVjKxZq0g" field="TECHNICAL" name="PROPERTY_TYPE_IMPLICIT_CONTEXT:REPOSITORY_PROPERTY_TYPE" value="" contextMode="false"/>
       </parameters>
     </implicitContextSettings>
-    <ItemsRelations xmi:id="_KMiZ0KhkEeay0dIuCvoVww">
-      <baseItem xmi:id="_KMiZ0ahkEeay0dIuCvoVww" id="_0Mq24KRKEeauHJVjKxZq0g" version="0.1" type="job"/>
-      <relatedItems xmi:id="_KMiZ0qhkEeay0dIuCvoVww" id="_1Z0UkKRMEeauHJVjKxZq0g" version="Latest" type="property"/>
-      <relatedItems xmi:id="_KMiZ06hkEeay0dIuCvoVww" id="_7mPQAKRLEeauHJVjKxZq0g" version="Latest" type="property"/>
-      <relatedItems xmi:id="_KMiZ1KhkEeay0dIuCvoVww" id="_OwL-cKhUEeatxJezHCxmQg" version="Latest" type="property"/>
-      <relatedItems xmi:id="_KMiZ1ahkEeay0dIuCvoVww" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_KMiZ1qhkEeay0dIuCvoVww" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_KMiZ16hkEeay0dIuCvoVww" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_KMiZ2KhkEeay0dIuCvoVww" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_KMiZ2ahkEeay0dIuCvoVww" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_KMiZ2qhkEeay0dIuCvoVww" id="Mathematical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_KMiZ26hkEeay0dIuCvoVww" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_KMiZ3KhkEeay0dIuCvoVww" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_KMiZ3ahkEeay0dIuCvoVww" id="_7mPQAKRLEeauHJVjKxZq0g - gold_links" version="Latest" type="schema"/>
-      <relatedItems xmi:id="_KMiZ3qhkEeay0dIuCvoVww" id="_7mPQAKRLEeauHJVjKxZq0g - gold_posts" version="Latest" type="schema"/>
-      <relatedItems xmi:id="_KMiZ36hkEeay0dIuCvoVww" id="_1Z0UkKRMEeauHJVjKxZq0g - movies_csv_db" version="Latest" type="schema"/>
-      <relatedItems xmi:id="_KMiZ4KhkEeay0dIuCvoVww" id="_OwL-cKhUEeatxJezHCxmQg - metadata" version="Latest" type="schema"/>
+    <ItemsRelations xmi:id="_zSZ0YKjnEeaS07Lujv0hUw">
+      <baseItem xmi:id="_zSZ0YajnEeaS07Lujv0hUw" id="_0Mq24KRKEeauHJVjKxZq0g" version="0.1" type="job"/>
+      <relatedItems xmi:id="_zSabcKjnEeaS07Lujv0hUw" id="_1Z0UkKRMEeauHJVjKxZq0g" version="Latest" type="property"/>
+      <relatedItems xmi:id="_zSabcajnEeaS07Lujv0hUw" id="_OwL-cKhUEeatxJezHCxmQg" version="Latest" type="property"/>
+      <relatedItems xmi:id="_zSabcqjnEeaS07Lujv0hUw" id="_76T60KjmEeaS07Lujv0hUw" version="Latest" type="property"/>
+      <relatedItems xmi:id="_zSabc6jnEeaS07Lujv0hUw" id="_7mPQAKRLEeauHJVjKxZq0g" version="Latest" type="property"/>
+      <relatedItems xmi:id="_zSabdKjnEeaS07Lujv0hUw" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_zSabdajnEeaS07Lujv0hUw" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_zSabdqjnEeaS07Lujv0hUw" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_zSabd6jnEeaS07Lujv0hUw" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_zSabeKjnEeaS07Lujv0hUw" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_zSabeajnEeaS07Lujv0hUw" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_zSabeqjnEeaS07Lujv0hUw" id="Mathematical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_zSabe6jnEeaS07Lujv0hUw" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_zSabfKjnEeaS07Lujv0hUw" id="_7mPQAKRLEeauHJVjKxZq0g - gold_categories" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_zSabfajnEeaS07Lujv0hUw" id="_OwL-cKhUEeatxJezHCxmQg - metadata" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_zSabfqjnEeaS07Lujv0hUw" id="_7mPQAKRLEeauHJVjKxZq0g - gold_links" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_zSabf6jnEeaS07Lujv0hUw" id="_76T60KjmEeaS07Lujv0hUw - movies_categs_csv" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_zSabgKjnEeaS07Lujv0hUw" id="_1Z0UkKRMEeauHJVjKxZq0g - movies_csv_db" version="Latest" type="schema"/>
     </ItemsRelations>
     <migrationTask xmi:id="_Y3X5sKRKEeaUw_C9Rpr8Cw" id="org.talend.designer.core.ui.preferences.migration.ChangeMysqlVersionForProjectSetting" breaks="5.2.0" version="5.1.3" status="ok"/>
     <migrationTask xmi:id="_Y3X5saRKEeaUw_C9Rpr8Cw" id="org.talend.designer.core.ui.preferences.migration.ChangeOracleVersionForProjectSetting" breaks="5.2.0" version="5.2.1" status="ok"/>
